<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_layout_learn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/leftarrowlearnButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/prev_button"
        app:layout_constraintBottom_toTopOf="@+id/adView_learn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightarrowlearnButton"/>

    <EditText
        android:id="@+id/gotolearnEditText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:hint="@string/go_to_edit_text"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/gotolearnButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rightarrowlearnButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/next_button"
        app:layout_constraintBottom_toTopOf="@+id/adView_learn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftarrowlearnButton"/>

    <TextView
        android:id="@+id/questionnumberlearnTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/question_number_text_view"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/gotolearnButton"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:text="@string/go_to_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subjectTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/subject"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/rightarrowlearnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_learn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/MY_ADMOB_ID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/ScrollViewlearn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/subjectTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionnumberlearnTextView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Constraint_layout_learn_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/questionlearnTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/question_text_view"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/answerlearnTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="110dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/answer_text_view"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionlearnTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>