<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_layout_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor">

    <Button
        android:id="@+id/leftarrowtestButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/prev_button"
        app:layout_constraintBottom_toTopOf="@+id/adView_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightarrowtestButton"/>

    <TextView
        android:id="@+id/questionnumbertestTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/question_number_text_view"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gototestEditText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:hint="@string/go_to_edit_text"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/gototestButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rightarrowtestButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/next_button"
        app:layout_constraintBottom_toTopOf="@+id/adView_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftarrowtestButton"/>

    <Button
        android:id="@+id/gototestButton"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:text="@string/go_to_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/ScrollViewTest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/rightarrowtestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionnumbertestTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Constraint_layout_test_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/questiontestTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/question_text_view"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/ans1testButton"
                style="@android:style/Widget.Material.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:background="#19FFFFFF"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:padding="5dp"
                android:text="@string/odpowiedz1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questiontestTextView" />

            <Button
                android:id="@+id/ans2testButton"
                style="@android:style/Widget.Material.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:background="#19FFFFFF"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:padding="5dp"
                android:text="@string/odpowiedz2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ans1testButton" />

            <Button
                android:id="@+id/ans3testButton"
                style="@android:style/Widget.Material.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:background="#19FFFFFF"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:padding="5dp"
                android:text="@string/odpowiedz3"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ans2testButton" />

            <Button
                android:id="@+id/ans4testButton"
                style="@android:style/Widget.Material.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:background="#19FFFFFF"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="6sp"
                android:padding="5dp"
                android:text="@string/odpowiedz4"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ans3testButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/BOTTOM_BANNER_ID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>