<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_layout_opening"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spit_lighter"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appnameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appnameTextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Constraint_layout_opening_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/learnButton"
                android:layout_width="160dp"
                android:layout_height="59dp"
                android:layout_marginTop="145dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/learn_button"
                android:textColor="@color/opening_button_text_color"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/testButton"
                android:layout_width="160dp"
                android:layout_height="59dp"
                android:layout_marginTop="55dp"
                android:background="@android:color/transparent"
                android:text="@string/test_yourself_button"
                android:textColor="@color/opening_button_text_color"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/learnButton" />

            <Button
                android:id="@+id/examButton"
                android:layout_width="160dp"
                android:layout_height="59dp"
                android:layout_marginTop="55dp"
                android:background="@android:color/transparent"
                android:text="@string/exam_yourself_button"
                android:textColor="@color/opening_button_text_color"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/testButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>